--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "package": "bundle exec rake build_rbz",
+    "package": "rm && bundle exec rake build_rbz",
     "release": "npm run build && npm run package",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "lint": "eslint **/*.js --ignore-pattern node_modules/"
+    "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js"
+    "reformat": "prettier --write \"dialogs/**/*.{js,vue}\""
   },
   "dependencies": {
     "debounce": "^1.2.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
+    "prettier": "^1.16.4",
     "sass-loader": "^5.0.1",
     "stylelint": "^9.10.1",
     "stylelint-webpack-plugin": "^0.10.5",
@@ -39,16 +41,44 @@
   },
   "babel": {
     "presets": [
-      ["env", { "modules": false }]
+      [
+        "env",
+        {
+          "modules": false
+        }
+      ]
     ]
   },
   "eslintConfig": {
     "root": true,
+    "env": {
+        "es6": true,
+        "browser": true
+    },
     "extends": [
       "eslint:recommended",
-      "plugin:vue/recommended",
-      "plugin:prettier/recommended"
-    ]
+      "plugin:vue/recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module"
+    },
+    "rules": {
+        "no-console": 0,
+        "no-empty": ["error", {"allowEmptyCatch": true}],
+        "no-extra-semi": 1,
+        "no-unused-vars": 0,
+        "no-var": 1,
+        "quotes": ["error", "single"],
+        "semi": ["error", "never"],
+        "vue/html-self-closing": 0
+    }
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true
   },
   "stylelint": {
     "rules": {
