--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release": "npm run build && npm run package",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js"
+    "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js",
     "reformat": "prettier --write \"dialogs/**/*.{js,vue}\""
   },
   "dependencies": {
