--- a/package.json
+++ b/package.json
@@ -4,40 +4,57 @@
   "description": "A viewer and editor for SketchUp entity and model attributes.",
   "author": "Aerilius",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Aerilius/sketchup-attribute-inspector.git"
+  },
   "private": true,
   "scripts": {
-    "package": "rm && bundle exec rake build_rbz",
     "release": "npm run build && npm run package",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "package": "rm && bundle exec rake build_rbz",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js",
-    "reformat": "prettier --write \"dialogs/**/*.{js,vue}\""
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "reformat": "prettier --write \"dialogs/**/*.{js,vue}\"",
+    "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js"
   },
   "dependencies": {
     "debounce": "^1.2.0",
     "vue": "^2.6.10",
-    "vue-json-viewer": "^2.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-json-viewer": "^2.1.4"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-env": "^1.5.1",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^5.15.3",
+    "@babel/core": "^7.4.0",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "file-loader": "^0.9.0",
-    "node-sass": "^4.5.0",
+    "file-loader": "^3.0.1",
+    "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
-    "sass-loader": "^5.0.1",
-    "stylelint": "^9.10.1",
+    "sass-loader": "^7.1.0",
+    "stylelint": "^8.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "vue-loader": "^12.1.0",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "babel": {
     "presets": [
@@ -52,26 +69,42 @@
   "eslintConfig": {
     "root": true,
     "env": {
-        "es6": true,
-        "browser": true
+      "es6": true,
+      "browser": true
     },
     "extends": [
       "eslint:recommended",
-      "plugin:vue/recommended"
+      "plugin:vue/recommended",
+      "standard"
     ],
     "parserOptions": {
       "ecmaVersion": 6,
+      "parser": "babel-eslint",
       "sourceType": "module"
     },
+    "plugins": [
+      "vue"
+    ],
     "rules": {
-        "no-console": 0,
-        "no-empty": ["error", {"allowEmptyCatch": true}],
-        "no-extra-semi": 1,
-        "no-unused-vars": 0,
-        "no-var": 1,
-        "quotes": ["error", "single"],
-        "semi": ["error", "never"],
-        "vue/html-self-closing": 0
+      "no-console": 0,
+      "no-empty": [
+        "error",
+        {
+          "allowEmptyCatch": true
+        }
+      ],
+      "no-extra-semi": 1,
+      "no-unused-vars": 0,
+      "no-var": 1,
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "never"
+      ],
+      "vue/html-self-closing": 0
     }
   },
   "prettier": {
