--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "release": "npm run build && npm run package",
     "package": "rm && bundle exec rake build_rbz",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
+    "dev-server": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "reformat": "prettier --write \"dialogs/**/*.{js,vue}\"",
     "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js"
   },
