Update dependencies (why do they make old dependencies unfindable, breaking unchanged software?)

--- a/package.json
+++ b/package.json
@@ -12,51 +12,50 @@
   "scripts": {
     "release": "npm run build && npm run package",
     "package": "bundle exec rake build_rbz",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
+    "build": "cross-env NODE_ENV=production webpack --progress",
+    "dev": "cross-env NODE_ENV=development webpack --progress",
     "dev-server": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "reformat": "prettier --write \"dialogs/**/*.{js,vue}\"",
     "lint": "eslint \"dialogs/**/*.{js,vue}\" --ignore-pattern **/vendor/**/*.js"
   },
   "dependencies": {
-    "debounce": "^1.2.0",
+    "debounce": "^2.0.0",
     "sketchup-bridge": "^3.0.4",
-    "vue": "^2.6.12",
-    "vue-json-viewer": "^2.2.15"
+    "vue": "^2.7.16",
+    "vue-json-viewer": "^2.2.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.1",
+    "@babel/core": "^7.24.4",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/preset-env": "^7.24.4",
+    "babel-core": "^4.7.16",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "chai": "^4.2.0",
-    "cross-env": "^5.2.1",
-    "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^3.0.1",
-    "mocha": "^10.2.0",
+    "babel-loader": "^9.1.3",
+    "babel-preset-vue": "^2.0.2",
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "file-loader": "^6.2.0",
+    "mocha": "^10.4.0",
     "node-sass": "^9.0.0",
-    "prettier": "^1.19.1",
-    "sass-loader": "^7.3.1",
-    "stylelint": "^8.0.0",
-    "stylelint-webpack-plugin": "^0.10.5",
-    "vue-loader": "^15.9.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "prettier": "^3.2.5",
+    "sass-loader": "^14.2.1",
+    "stylelint": "^16.4.0",
+    "stylelint-webpack-plugin": "^5.0.0",
+    "vue-loader": "<=15",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "eslintConfig": {
